updated implementation for review comments